27 - Showing blog posts

--- a/Templates/admin/base.html
+++ b/Templates/admin/base.html
@@ -1,13 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div>
-    <ul>
-        <li><a href="{{ url_for('admin.index') }}">Dashboard</a></li>
-        <li><a href="{{ url_for('admin.create_post') }}">Add New Posts</a></li>
-        <li><a href="{{ url_for('admin.logout') }}">Logout</a></li>
-    </ul>
-</div>
+
+{% include 'admin/_includes/navigation.html' %}
 
 <div>
     <!-- flash messages -->
