28 - Modify Database Data, More Admin Panel Pages!

--- a/Templates/admin/_includes/navigation.html
+++ b/Templates/admin/_includes/navigation.html
@@ -1,7 +1,8 @@
-<div>
-    <ul>
-        <li><a href="{{ url_for('admin.index') }}">Dashboard</a></li>
-        <li><a href="{{ url_for('admin.create_post') }}">Add New Posts</a></li>
-        <li><a href="{{ url_for('admin.logout') }}">Logout</a></li>
-    </ul>
-</div>
+<header>
+    <a class="logo button" href="{{ url_for('admin.index') }}">Dashboard</a>
+    <a class="button" href="{{ url_for('admin.create_post') }}">Add New Posts</a>
+    <a class="button" href="{{ url_for('admin.list_posts') }}">List Posts</a>
+    <a class="button" href="{{ url_for('admin.list_users') }}">List Users</a>
+    <a class="button" href="{{ url_for('admin.get_create_user') }}">Create User</a>
+    <a class="button" href="{{ url_for('admin.logout') }}">Logout</a>
+</header>
