--- a/Templates/blog/_includes/navigation.html
+++ b/Templates/blog/_includes/navigation.html
@@ -1,6 +1,4 @@
-<div>
-    <ul>
-        <li><a href="{{ url_for('users.register') }}">Register</a></li>
-        <li><a href="{{ url_for('blog.index') }}">Blog</a></li>
-    </ul>
-</div>
+<header>
+    <a class="button" href="{{ url_for('users.register') }}">Register</a>
+    <a class="button" href="{{ url_for('blog.index') }}">Blog</a>
+</header>
