--- a/Templates/admin/_includes/navigation.html
+++ b/Templates/admin/_includes/navigation.html
@@ -2,6 +2,8 @@
     <a class="logo button" href="{{ url_for('admin.index') }}">Dashboard</a>
     <a class="button" href="{{ url_for('admin.create_post') }}">Add New Posts</a>
     <a class="button" href="{{ url_for('admin.list_posts') }}">List Posts</a>
+    <a class="button" href="{{ url_for('admin.create_category') }}">Add New Category</a>
+    <a class="button" href="{{ url_for('admin.list_categories') }}">List Categories</a>
     <a class="button" href="{{ url_for('admin.list_users') }}">List Users</a>
     <a class="button" href="{{ url_for('admin.get_create_user') }}">Create User</a>
     <a class="button" href="{{ url_for('admin.logout') }}">Logout</a>
