--- a/Templates/admin/modify_post.html
+++ b/Templates/admin/modify_post.html
@@ -10,6 +10,7 @@
     Title : {{ form.title }}<br>
     Summary : {{ form.summary }}<br>
     Content : {{ form.content }}<br>
+    Categories : {{ form.categories}}
     <input type="submit" value="Save">
 </form>
 {% endblock %}
