32 - Getting started with Static Files

--- a/Templates/blog/_includes/navigation.html
+++ b/Templates/blog/_includes/navigation.html
@@ -1,4 +1,5 @@
-<header>
+<header style="padding: 30px;">
+    <a href="{{ url_for('index' )}}"><img class="logo button" src="{{ url_for('static', filename='image/python.png') }}" alt=""></a>
     <a class="button" href="{{ url_for('users.register') }}">Register</a>
     <a class="button" href="{{ url_for('blog.index') }}">Blog</a>
 </header>
